--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -10,33 +10,58 @@
 <style></style>
 
 <main class="main">
-  <div style="padding: 0 10vw 0 10vw">
+  <div style="padding: 0 20vw">
     <h1
       style="
         text-align: center;
         font-size: 2rem;
-        padding: 2rem 0;
+        padding: 2rem 0 1.5rem 0;
         margin-bottom: 0;
       "
     >
       Job Applications Tracker
     </h1>
-    <div style="display: flex; flex-direction: column; gap: 1rem">
-      <app-list-item
+    <h2 style="text-align: center">Total applications: {{ numOfItems }}</h2>
+    <div
+      style="
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        margin-bottom: 2rem;
+      "
+    >
+      <!-- <app-list-item
         [title]="'Full Stack Web Developer'"
-        [company]="'Angular'"
+        [company]="2"
         [lastUpdated]="currentDate"
+        [companies]="companies"
       ></app-list-item>
       <app-list-item
         [title]="'Full Stack Web Developer'"
-        [company]="'Angular'"
+        [company]="4"
         [lastUpdated]="currentDate"
+        [companies]="companies"
+      ></app-list-item> -->
+      @for (item of applications; track item) {
+      <app-list-item
+        [application]="item"
+        [companies]="companies"
       ></app-list-item>
+      }
     </div>
+    <mat-paginator
+      [length]="numOfItems"
+      [pageSize]="10"
+      aria-label="Select page"
+      (page)="handlePageEvent($event)"
+      showFirstLastButtons
+    >
+    </mat-paginator>
     <button
       mat-fab
       color="primary"
-      style="position: absolute; bottom: 2rem; right: 2rem"
+      style="position: fixed; bottom: 2rem; right: 2rem"
+      (click)="openDialog()"
     >
       <mat-icon fontIcon="add"></mat-icon>
     </button>
